refactor: refactoring code and add typing

--- a/src/components/Header/styles.sass
+++ b/src/components/Header/styles.sass
@@ -5,7 +5,7 @@
   justify-content: space-between
   align-items: center
   padding: 4px
-  &__minutes,
+  &__mines,
   &__seconds
     display: flex
   &__btn
@@ -25,7 +25,7 @@
 .dead
   background-position: -108px -24px
 
-.time
+.number
   width: 14px
   height: 23px
   background: url(../../assets/images/sprite.png) no-repeat
